added h2 persistence and single blogpost controller logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.h2.console.path=/console
 spring.datasource.platform=h2 
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# Define a file to use to save database instead of relying on in-memory
+# If file doesn't exist, app will create it
+spring.datasource.url = jdbc:h2:file:~/data/app
+# When server is started, this makes the H2 database automatically update 
+# to match the schema found in the external file
+spring.jpa.hibernate.ddl-auto = update
