--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # Define a file to use to save database instead of relying on in-memory
 # If file doesn't exist, app will create it
 spring.datasource.url = jdbc:h2:file:~/data/app
-# When server is started, this makes the H2 database automatically update 
-# to match the schema found in the external file
+## When server is started, this makes the H2 database automatically update 
+## to match the schema found in the external file
 spring.jpa.hibernate.ddl-auto = update
+#
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
